[package]
name = "layeringtst"
version = "0.1.0"
authors = ["PeterUlb <peter@ulbrich.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
env_logger = "0.8.1"
dotenv = "0.15.0"
serde = "1.0.117"
serde_json = "1.0.59"
async-trait = "0.1.42"
tokio-postgres = "0.5.5"
deadpool-postgres = "0.5.5"
tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
actix-rt = "1.1.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }